# c-library-template

./: .gitignore  CMakeLists.txt  LiCENSE  Makefile  README.md
include/my_library/: my_library.h
src/: my_library.c
tests/: test_my_library.c
